kustomize/base/iam/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam
  labels:
    app.kubernetes.io/name: iam
    app.kubernetes.io/component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: iam
      app.kubernetes.io/component: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: iam
        app.kubernetes.io/component: api
    spec:
      serviceAccountName: iam
      securityContext:
        fsGroup: 2000
      containers:
        - name: iam
          securityContext:
            capabilities:
              drop:
              - ALL
            # IAM needs to fix audit logs for this to be enabled
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
          image: ghcr.io/verseghy/iam:v8
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /live
              port: http
            initialDelaySeconds: 300
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 5
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: iam
              app.kubernetes.io/component: api
