kustomize/base/iam/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iam
  labels:
    app.kubernetes.io/name: iam
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: iam
    app.kubernetes.io/component: api
